auto-test/tests/chapter_8/valid/extra_credit/switch_decl.c

int main(void) {
    int a = 3;
    int b = 0;
    switch(a) {
        
        int a = (b = 5);
    case 3:
        a = 4;
        b = b + a;
    }

    
    return a == 3 && b == 4;
}