auto-test/tests/chapter_8/invalid_semantics/extra_credit/undeclared_variable_in_case.c


int main(void) {
    int a = 10;
    switch (a) {
        case 1:
            return b;
            break;

        default:
            break;
    }
    return 0;
}